# mw

./: .dockerignore  .env  .gitignore  Dockerfile  azure-pipelines.yml  docker-compose.yml  entrypoint.sh  makefile  manage.py  pyproject.toml  settings.py  setup.cfg
.github/workflows/: django-mw1-AutoDeployTrigger-751edcec-85ad-49f7-8c97-65de233faafa.yml
common/: models.py
config/: asgi.py  urls.py  urls_dev.py  wsgi.py
config/settings/: base.py  local.py  production.py
zonifero/: asgi.py  pyproject.toml  settings.py  urls.py  wsgi.py
