[tool.poetry]
name = "zonifero"
version = "2.0.0"
description = ""
authors = ["Jerzy Kapciak <jerzy.kapciak@zonifero.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.6"
psycopg2 = "^2.9.9"
python-dotenv = "^1.0.0"
djangorestframework = "^3.14.0"
gunicorn = "^21.2.0"
whitenoise = "^6.6.0"
sentry-sdk = "^1.36.0"

[tool.poetry.dev-dependencies]
black = "^23.10.1"
isort = "^5.12.0"
bandit = "^1.7.5"
flake8 = "^6.1.0"
pylint = "^3.0.2"
django-debug-toolbar = "^4.2.0"
drf-yasg = "^1.21.7"

[tool.black]
line-length = 120
target-version = ["py311"]
--extend-exclude = '''
/(
  .env_local.py
  /venv
)/
| migrations/
'''

[tool.isort]
line_length = 120

[tool.pylint.DESIGN]
max-args = 5
good-names="i,j,k,v,ex,_,pk,x,y"

[tool.pylint.FORMAT]
max-line-length = 120
ignore-paths=".*/migrations"

[tool.pylint."MESSAGES CONTROL"]
disable = "missing-docstring, line-too-long, logging-fstring-interpolation, duplicate-code"

[tool.pylint.SIMILARITIES]
ignore-comments = "yes"
ignore-docstrings = "yes"
ignore-imports = "yes"
min-similarity-lines = 5
disable = "R0903"

[tool.bandit]
exclude = ["test_*.py","./venv/","./env/", "/.env","./.venv","migrations","tests"]
skips = ["B101","B311"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
